[package]
name = "clean-text"
version = "0.1.0"
authors = ["reiyw <reiyw.setuve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
bincode = "1.3.1"
rust-embed = "5.5.1"
itertools = "0.9.0"
onig = "6.0.0"
